<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a89370.SignActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="地理位置："/>

        <TextView
            android:id="@+id/tv_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/sign_tv_choice"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="签到地点选择"
            android:textSize="26sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/sign_rg"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/sign_btn_point1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_point1" />

                <RadioButton
                    android:id="@+id/sign_btn_point2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/sign_btn_point1"
                    android:text="@string/sign_point2" />

                <RadioButton
                    android:id="@+id/sign_btn_point3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_btn_point1"
                    android:text="@string/sign_point3" />

                <RadioButton
                    android:id="@+id/sign_btn_point4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_btn_point2"
                    android:layout_toEndOf="@id/sign_btn_point3"
                    android:text="@string/sign_poin4" />

                <RadioButton
                    android:id="@+id/sign_btn_point5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_btn_point3"
                    android:text="@string/sign_point5" />

            </RelativeLayout>
        </RadioGroup>

        <Button
            android:id="@+id/sign_btn_sign"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="100dp"
            android:text="@string/sign_btn" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
