<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a89370.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_title"
            android:textColor="#000ff0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <TextView
                    android:id="@+id/login_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/login_name"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/login_et_name"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/telephone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <TextView
                    android:id="@+id/login_tv_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_pwd"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/login_et_pwd"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:text="@string/login_btn"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
