<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a89370.WorkinfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/info_tv_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_tv_num"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/info_et_num"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:editable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/info_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_tv_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/info_et_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:editable="false" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/info_tv_ccid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_tx_ccid"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/info_et_ccid"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:editable="false" />

        </LinearLayout>

        <Button
            android:id="@+id/info_btn_exit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:text="退出登录" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
